--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
+    "clsx": "^1.2.1",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
