--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["*"]
-    }
+    },
+    "types": ["node"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/loadData.ts"],
   "exclude": ["node_modules"]
 }
