--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@tailwindcss/typography": "^0.5.4",
     "@types/node": "^18.6.5",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
